Added middle session task